skins/foundation/css/foundation.css
/* ... */
/* Touch-enabled device targeting */
.show-for-touch {
  display: none !important; }

.hide-for-touch {
  display: inherit !important; }

.touch .show-for-touch {
  display: inherit !important; }

.touch .hide-for-touch {
  display: none !important; }

/* Specific visibility for tables */
table.hide-for-touch {
  display: table !important; }

.touch table.show-for-touch {
  display: table !important; }

thead.hide-for-touch {
  display: table-header-group !important; }

.touch thead.show-for-touch {
  display: table-header-group !important; }

tbody.hide-for-touch {
  display: table-row-group !important; }

.touch tbody.show-for-touch {
  display: table-row-group !important; }

tr.hide-for-touch {
  display: table-row !important; }

.touch tr.show-for-touch {
  display: table-row !important; }

td.hide-for-touch {
  display: table-cell !important; }

.touch td.show-for-touch {
  display: table-cell !important; }

th.hide-for-touch {
  display: table-cell !important; }

.touch th.show-for-touch {
  display: table-cell !important; }

/* Screen reader-specific classes */
.show-for-sr {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute !important;
  width: 1px; }

.show-on-focus {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute !important;
  width: 1px; }
  .show-on-focus:focus, .show-on-focus:active {
    position: static !important;
    height: auto;
    width: auto;
    overflow: visible;
    clip: auto; }

/*
 * Print styles.
 *
 * Inlined to avoid required HTTP connection: www.phpied.com/delay-loading-your-print-css/
 * Credit to Paul Irish and HTML5 Boilerplate (html5boilerplate.com)
*/
.print-only {
  display: none !important; }

@media print {
  * {
    background: transparent !important;
    box-shadow: none !important;
    color: #000000 !important;
    /* Black prints faster: h5bp.com/s */
    text-shadow: none !important; }

  .show-for-print {
    display: block; }

  .hide-for-print {
    display: none; }

  table.show-for-print {
    display: table !important; }

  thead.show-for-print {
    display: table-header-group !important; }

  tbody.show-for-print {
    display: table-row-group !important; }

  tr.show-for-print {
    display: table-row !important; }

  td.show-for-print {
    display: table-cell !important; }

  th.show-for-print {
    display: table-cell !important; }

  a,
  a:visited {
    text-decoration: underline; }

  a[href]:after {
    content: " (" attr(href) ")"; }

  abbr[title]:after {
    content: " (" attr(title) ")"; }

  .ir a:after,
  a[href^="javascript:"]:after,
  a[href^="#"]:after {
    content: ""; }

  pre,
  blockquote {
    border: 1px solid #999999;
    page-break-inside: avoid; }

  thead {
    display: table-header-group;
    /* h5bp.com/t */ }

  tr,
  img {
    page-break-inside: avoid; }

  img {
    max-width: 100% !important; }

  @page {
    margin: .5cm; }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3; }

  h2,
  h3 {
    page-break-after: avoid; }

  .hide-on-print {
    display: none !important; }

  .print-only {
    display: block !important; }

  .hide-for-print {
    display: none !important; }

  .show-for-print {
    display: inherit !important; }
}
/* Print visibility */
@media print {
  .show-for-print {
    display: block; }

  .hide-for-print {
    display: none; }

  table.show-for-print {
    display: table !important; }

  thead.show-for-print {
    display: table-header-group !important; }

  tbody.show-for-print {
    display: table-row-group !important; }

  tr.show-for-print {
    display: table-row !important; }

  td.show-for-print {
    display: table-cell !important; }

  th.show-for-print {
    display: table-cell !important; } }
@media not print {
  .show-for-print {
    display: none !important; } }

#nav-actions.row {
  margin-left:-100%;
  margin-right:-70%;
 }
#box-search{
  margin-top:-0.35em;
}
.icon2{
  margin-left:36%;
  margin-top:1em;
  margin-bottom:2em;
  float: left;
}
.checkoutfooter{
  background-color:#393E41;
  height:0%;
  padding-top:0.1em;
  padding-bottom:0.1em;
}
#top_header.row.marg-top{
  width:42%;
}
#top_headercheckout.row.marg-top{
  margin-top:-0.0001%;
}
.row.home_wrapper{
-webkit-box-shadow: 2px 51px 17px 2px rgba(0,0,0,0.75);
-moz-box-shadow: 2px 51px 17px 2px rgba(0,0,0,0.75);
box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
}
.small-12.columns.small-collapse{
  background-color:#fff;
}

.leftcontact{
  float:left;
  color: #fff;
  margin-left:10.5%;
  font-size:12px;
  background-color:#E7BB41;
  -moz-border-radius:14px;
  -webkit-border-radius:14px;
  border-radius:14px;
  display:inline-block;
  cursor:pointer;
  color:#000;
  font-family:Arial;
  font-weight:bold;
  padding:0px 10px 1px 20px;
  text-decoration:none;
}
.leftcontact2{
  float:left;
  color: #fff;
  margin-left:-3%;
  margin-top:1px;
  font-size:14px;
  background-color:#E7BB41;
  -moz-border-radius:14px;
  -webkit-border-radius:14px;
  border-radius:14px;
  display:inline-block;
  cursor:pointer;
  color:#000;
  font-family:Arial;
  font-weight:bold;
  padding:0px 10px 2px 23px;
  text-decoration:none;
}

#box-session2{
  float:right;
  color: #fff;
  font-size:12px;
  background-color:#E7BB41;
  border-radius:0px;
  display:inline-block;
  cursor:pointer;
  color:#000;
  font-weight:bold;
  padding:10px 3px 0px 3px;
  text-decoration:none;
  text-shadow:0px 1px 0px #333;
}

#box-session{
  height:150%;
  float:left;
  color: #fff;
  margin-bottom:0%;
  font-size:12px;
  -moz-box-shadow: 0px 10px 14px -7px #000;
  -webkit-box-shadow: 0px 10px 14px -7px #000;
  box-shadow: 5px 8px 1px 0px #000;
  background-color:#E7BB41;
  -moz-border-radius:0px;
  -webkit-border-radius:0px;
  border-radius:0px;
  display:inline-block;
  cursor:pointer;
  color:#000;
  font-weight:bold;
  padding:5px 3px 0px 3px;
  text-decoration:none;
  text-shadow:0px 1px 0px #3d768a;
}
/* ... */

